Thu Feb 19 15:14:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/etc/etc.c (etc_each_group): defines only when Etc::Group is
	  available.

Thu Feb 19 15:11:40 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval_intern.h (translit_char): moved from ruby.c.

	* load.c (load_ext): transliterates file separators and back if
	  needed.

	* symbian/setup (DLN_NEEDS_ALT_SEPARATOR): defined.

Thu Feb 19 14:48:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, */Makefile.sub (LOAD_RELATIVE): moved from ruby.c

Thu Feb 19 14:39:53 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (darwin): uses -unexported_symbol option of ld instead
	  of objcopy

	* configure.in (darwin): makes dylib instead of so.

Thu Feb 19 14:22:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): added phony targets.

	* lib/mkmf.rb (create_makefile): creates target directories before
	  copying.  [ruby-core:21958]

	* lib/mkmf.rb (create_makefile): removes directories in the depth
	  order.

Thu Feb 19 13:56:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_home_dir): checks if HAVE_PWD_H.  [ruby-dev:38049]

Thu Feb 19 08:45:48 2009  TAKANO Mitsuhiro (takano32)  <tak@no32.tk>

	* ext/socket/rubysocket.h: add "#include <sys/stat.h>"

Thu Feb 19 03:42:48 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (ancillary_rights): new method.
	  (make_io_for_rights): new function to allocate
	  IOs for FDs in SCM_RIGHTS message.
	  (bsock_recvmsg_internal): use make_io_for_rights.  So the FDs can be
	  closed by GC.

Thu Feb 19 03:28:59 2009  Akinori MUSHA  <knu@iDaemons.org>

	* README.EXT, README.EXT.ja: Improve the document about
	  rb_scan_args() even more.

Thu Feb 19 03:12:51 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_file_exhaustive.rb: skip some tests if euid == 0. 
	  a patch from Lucas Nussbaum in [ruby-core:22209].

Thu Feb 19 03:00:49 2009  Akinori MUSHA  <knu@iDaemons.org>
