@@ -1,3 +1,7 @@
+Thu Feb 19 15:17:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/tmpdir.rb (@@systmpdir): File.expand_path also joins paths.
+
 Thu Feb 19 15:14:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/etc/etc.c (etc_each_group): defines only when Etc::Group is
